--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ form{
     padding-top: 1.5rem;
     outline: solid 0.2rem #c1f771;
     outline-offset: 0rem;
+    padding-bottom: 2rem;
 }
 
 ul>li{
@@ -28,4 +29,30 @@ ul{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+}
+
+.submit{
+    align-content: flex-start;
+    margin-top: 1rem;
+    margin-left:  -8rem;
+    padding: 0.25rem 1.5rem;
+    background-color: #c1f771;
+    border: #435a22 0.2rem solid;
+}
+
+#error, #pwderror, #cnfrmerror{
+    display: block;
+    margin-top: 0.1rem;
+    margin-left: 2.7rem;
+    padding: 0.2rem 0.8rem;
+    color: #212121;
+}
+
+.error{
+    background-color: #dda439;
+}
+
+.error .active{
+    background-color: transparent;
+    
 }
